Added "addNewRecipe"
